add html and styling for registration page

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Global Router Login</title>
+<title>Login</title>
 {% include "header.html" %}
 <!-- Section: Design Block -->
 <section class="overflow-hidden login-bg vh-100">
