--- a/templates/login.html
+++ b/templates/login.html
@@ -23,16 +23,16 @@
       <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
         <div class="card bg-glass">
           <div class="card-body px-4 py-5 px-md-5">
-            <form>
+            <form action="/login", method="POST">
               <!-- Email input -->
               <h3 class="text-center py-2" style="color:rgb(72, 88, 146)">Login</h3>
               <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
+                <input type="email" class="form-control" id="emailInput" name="email" placeholder="name@example.com">
                 <label for="emailInput">Email address</label>
               </div>
               <!-- Password input -->
               <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+                <input type="password" class="form-control" id="passwordInput" name="password" placeholder="Password">
                 <label for="passwordInput">Password</label>
               </div>
 
