--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Login</title>
+<title>Reset Password</title>
 {% include "header.html" %}
 <!-- Section: Design Block -->
 <section class="overflow-hidden login-bg vh-100">
@@ -23,33 +23,18 @@
       <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
         <div class="card bg-glass">
           <div class="card-body px-4 py-5 px-md-5">
-            <form action="/login", method="POST">
+            <form action="/resetPassword", method="POST">
               <!-- Email input -->
-              <h3 class="text-center py-2" style="color:rgb(72, 88, 146)">Login</h3>
+              <h3 class="text-center py-2" style="color:rgb(72, 88, 146)">Reset Password</h3>
               <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="emailInput" name="email" required placeholder="name@example.com">
+                <input type="email" class="form-control" id="emailInput" name="email_to_reset" required placeholder="name@example.com">
                 <label for="emailInput">Email address</label>
-              </div>
-              <!-- Password input -->
-              <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="passwordInput" name="password" required placeholder="Password">
-                <label for="passwordInput">Password</label>
               </div>
 
               <!-- Submit button -->
               <button type="submit" class="btn btn-primary btn-block mb-4">
-                Log In
+                Reset
               </button>
-              <p class="small pb-lg-2"><a class="text-muted" href="/resetPassword">Forgot password?</a></p>
-              <p class="small">Don't have an account? <a href="/register" class="text-muted">Register here</a></p>
-
-              <!-- Register buttons -->
-              <div class="text-center">
-                <p>or log in with:</p>
-                <button type="button" class="btn btn-link btn-floating mx-1">
-                  <i class="fab fa-google"></i>
-                </button>
-              </div>
             </form>
           </div>
         </div>
