--- a/templates/register.html
+++ b/templates/register.html
@@ -25,6 +25,17 @@
           <div class="card-body px-4 py-5 px-md-5">
             <form action="/register" method="POST">
               <h3 class="text-center py-2" style="color:rgb(72, 88, 146)">Register</h3>
+              {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+              {% for category, message in messages %}
+              {% if category == "error" %}
+                <div class="alert alert-danger" role="alert">
+                  {{ message }}
+                </div>
+              {% endif %}
+              {% endfor %}
+              {% endif %}
+              {% endwith %}
 
               <!-- 2 column grid layout with text inputs for the first and last names -->
               <div class="row">
@@ -44,12 +55,12 @@
 
               <!-- Email input -->
               <div class="form-floating mb-3">
-                <input type="email" class="form-control" name="email" id="emailInput" placeholder="name@example.com">
+                <input type="email" class="form-control" name="email" id="emailInput" required placeholder="name@example.com">
                 <label for="emailInput">Email address</label>
               </div>
               <!-- Password input -->
               <div class="form-floating mb-3">
-                <input type="password" class="form-control" name="password" id="passwordInput" placeholder="Password">
+                <input type="password" class="form-control" name="password" id="passwordInput" required placeholder="Password">
                 <label for="passwordInput">Password</label>
               </div>
 
