add file input on dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,11 +31,13 @@
 
 <div class="container-fluid">
   <div class="row vh-100">
-    <div class="col-5 my-4">
+    <div class="col-5 my-4 p-3">
       <h2 class="text-muted">Dashboard</h2>
+      <label class="form-label" for="inputFile">Upload input netlist file</label>
+      <input type="file" class="form-control" id="inputFile" />
 
     </div>
-    <div class="col-7 my-4">
+    <div class="col-7 my-4 p-3">
       <h2 class="text-muted">Visualization</h2>
 
     </div>
