--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -10,7 +10,8 @@
           Global Router<br />
         </h1>
         <h5>
-          <span style="color: hsl(218, 77%, 83%)">Global Route Paths and Congestion Data Visualizer</span>
+          <p style="color: hsl(218, 77%, 83%)">Global Route Paths and Congestion Data Visualizer</p>
+          <a style="color: hsl(218, 77%, 83%)" href="http://global-router.rtfd.io/">Read Documentation</a>
         </h5>
         <!-- <p class="mb-4 opacity-70" style="color: hsl(220, 42%, 85%)">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit.
