--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -9,9 +9,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" style="color: hsl(221, 55%, 88%)" href="http://global-router.rtfd.io/">Documentation</a>
+        </li>
       </ul>
       <span class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-white" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
