add ajax script and update static style path in header

--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -5,9 +5,10 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../static/style.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css')}}" />
     <script
         src="https://kit.fontawesome.com/fdcc2fdd9a.js"
         crossorigin="anonymous"
     ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
