set visual width to 100%

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -48,7 +48,7 @@
     </div>
     <div class="col-xl-8 my-4 p-4">
       <h2 class="text-muted">Visualization</h2>
-      <img id="congestion-plot" alt="Congestion Data Plot" width="900px" style="border-radius: 10px;">
+      <img id="congestion-plot" alt="Congestion Data Plot" width="100%" style="border-radius: 10px;">
     </div>
   </div>
 </div>
