update loading mesasge and title

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -47,7 +47,7 @@
       <button type="button" id="sample-netlist" class="btn btn-primary mb-3">Use sample netlist</button>
     </div>
     <div class="col-xl-8 my-4 p-4">
-      <h2 class="text-muted">Visualization</h2>
+      <h2 class="text-muted">Congestion Visualization</h2>
       <img id="congestion-plot" alt="Congestion Data Plot" width="100%" style="border-radius: 10px;">
     </div>
   </div>
