--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -33,7 +33,7 @@
 
 <div class="container-fluid">
   <div class="row ">
-    <div class="col-xl-4 my-4 p-4">
+    <div class="col-xl-4 p-4">
       <div class="card mb-3">
         <div class="card-header">
           <h3 class="text-muted">Netlist Selection</h3>
@@ -83,20 +83,18 @@
       </div>
     </div>
 
-    <div class="col-xl-8 my-4 p-4">
+    <div class="col-xl-8 p-4">
       <div class="card mb-3">
         <div class="card-header">
           <h3 class="text-muted">Congestion Visualization</h3>
         </div>
         <div class="card-body">
-
           <img id="congestion-plot" alt="Congestion Data Plot" width="100%" style="border-radius: 10px;">
         </div>
       </div>
     </div>
   </div>
 
-</div>
 </div>
 
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/ajax.js')}}"></script>
