--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -67,13 +67,13 @@
 
       <div class="card mb-3">
         <div class="card-header">
-          <h3 class="text-muted">Layout Details</h3>
+          <h3 class="text-muted">Netlist Details</h3>
         </div>
         <div class="card-body">
           <span id="no-netlist-provided-span">
             No netlist provided
           </span>
-          <ul id="layout-details-list" hidden>
+          <ul id="netlist-details-list" hidden>
             <li id="grid-size"></li>
             <li id="horcap"></li>
             <li id="vercap"></li>
@@ -89,7 +89,7 @@
           <h3 class="text-muted">Congestion Visualization</h3>
         </div>
         <div class="card-body">
-          <img id="congestion-plot" alt="Congestion Data Plot" width="100%" style="border-radius: 10px;">
+          <img id="congestion-plot" alt="Congestion Data Plot" width="100%" style="border-radius: calc(.25rem - 1px);">
         </div>
       </div>
     </div>
