add netlist name display on gui

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -74,6 +74,7 @@
             No netlist provided
           </span>
           <ul id="netlist-details-list" hidden>
+            <li id="netlist-name"></li>
             <li id="grid-size"></li>
             <li id="horcap"></li>
             <li id="vercap"></li>
