svg visualization, interactive

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -90,7 +90,7 @@
           <h3 class="text-muted">Congestion Visualization</h3>
         </div>
         <div class="card-body">
-          <img id="congestion-plot" alt="Congestion Data Plot" width="100%" style="border-radius: calc(.25rem - 1px);">
+          <div id="plot-fig"></div>
         </div>
       </div>
     </div>
