add overflow and wirelength details to gui, update mpld3 plot

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -79,6 +79,8 @@
             <li id="horcap"></li>
             <li id="vercap"></li>
             <li id="netlist-size"></li>
+            <li id="overflow"></li>
+            <li id="wirelength"></li>
           </ul>
         </div>
       </div>
