--- a/web/static/styles/style.css
+++ b/web/static/styles/style.css
@@ -12,6 +12,12 @@ body {
 }
 
 .legend {
+    display: flex;
+    align-items: center;
+    min-height: 300px;
+}
+
+.legend ul{
     list-style: none;
     margin: 0;
     padding: 0;
@@ -35,4 +41,17 @@ body {
 .legend li .label {
     font-size: 14px;
     font-weight: bold;
+}
+
+.diagonal-text {
+    min-height: 300px;
+    position: relative;
+}
+
+.diagonal-text h4 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+    color: rgb(175, 175, 175);
 }
