add plot annotation

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -92,9 +92,11 @@
           <h3 class="text-muted me-auto">Congestion Visualization</h3>
         </div>
         <div class="card-body row">
-          <div id="plot-fig" class="col-xl-8"></div>
-          <div class="col-xl-4">
-            <ul class="legend mt-2">
+          <div id="plot-fig" class="col-xl-8 diagonal-text">
+            <h4>Congestion Plot</h4>
+          </div>
+          <div class="col-xl-4 legend">
+            <ul>
               <li>
                 <div class="legend-color" style="background-color: white;"></div>
                 <span class="label">No Use</span>
