--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -67,21 +67,9 @@
 
       <div class="card mb-3">
         <div class="card-header">
-          <h3 class="text-muted">Netlist Details</h3>
+          <h3 class="text-muted">Job Monitor</h3>
         </div>
         <div class="card-body">
-          <span id="no-netlist-provided-span">
-            No netlist provided
-          </span>
-          <ul id="netlist-details-list" hidden>
-            <li id="netlist-name"></li>
-            <li id="grid-size"></li>
-            <li id="horcap"></li>
-            <li id="vercap"></li>
-            <li id="netlist-size"></li>
-            <li id="overflow"></li>
-            <li id="wirelength"></li>
-          </ul>
         </div>
       </div>
     </div>
@@ -91,42 +79,21 @@
         <div class="card-header">
           <h3 class="text-muted me-auto">Congestion Visualization</h3>
         </div>
-        <div class="card-body row">
-          <div id="plot-fig" class="col-xl-8 diagonal-text">
+        <div class="card-body row" id="output-view">
+          <div id="plot-view" class="col-xl-8 diagonal-text">
             <h4>Congestion Plot</h4>
           </div>
-          <div class="col-xl-4 legend">
-            <ul>
-              <li>
-                <div class="legend-color" style="background-color: white;"></div>
-                <span class="label">No Use</span>
-              </li>
-              <li>
-                <div class="legend-color" style="background-color: blue;"></div>
-                <span class="label">Util <= 0.25</span>
-              </li>
-              <li>
-                <div class="legend-color" style="background-color: cyan;"></div>
-                <span class="label">Util <= 0.5</span>
-              </li>
-              <li>
-                <div class="legend-color" style="background-color: green;"></div>
-                <span class="label">Util <= 0.75</span>
-              </li>
-              <li>
-                <div class="legend-color" style="background-color: yellow;"></div>
-                <span class="label">Util <= 1.0</span>
-              </li>
-              <li>
-                <div class="legend-color" style="background-color: red;"></div>
-                <span class="label">Overflow</span>
-              </li>
-            </ul>
+          <div class="col-xl-4 " id="netlist-output-details">
+            <span>
+              <h5>Netlist Details</h5>
+              <span id="no-netlist-provided-span">No netlist provided</span>
+            </span>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 </div>
 
