--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -88,7 +88,7 @@
                 <td style="color: green;">Ready</td>
                 <td>{{output.timestamp}}</td>
                 <td>
-                  <button class="btn btn-primary" onclick="view_visual(' + {{loop.index }}+ ')" disabled>Opened</button>
+                  <button class="btn btn-primary" disabled>Opened</button>
                 </td>
               </tr>
               {% endfor %}
@@ -122,15 +122,16 @@
                   <span>
                     <h5>Netlist Details</h5>
                     <ul id="netlist-details-list">
-                      <li id="netlist-name-{{loop.index}}">Name: {{output.name}}</li>
-                      <li id="grid-size-{{loop.index}}">Grid: {{output.netlist_details.grid_hor}} x {{output.netlist_details.grid_ver}}</li>
-                      <li id="horcap-{{loop.index}}">Horizontal Capacity: {{output.netlist_details.hor_cap}}</li>
-                      <li id="vercap-{{loop.index}}">Vertical Capacity: {{output.netlist_details.ver_cap}}</li>
-                      <li id="netlist-size-{{loop.index}}">Netlist Size: {{output.netlist_size}}</li>
-                      <li id="overflow-{{loop.index}}">Overflow: {{output.overflow}}</li>
-                      <li id="wirelength-{{loop.index}}">Wirelength: {{output.wirelength}}</li>
-                      <li id="timestamp-{{loop.index}}">Timestamp: {{output.timestamp}}</li>
+                      <li>Name: {{output.name}}</li>
+                      <li>Grid: {{output.netlist_details.grid_hor}} x {{output.netlist_details.grid_ver}}</li>
+                      <li>Horizontal Capacity: {{output.netlist_details.hor_cap}}</li>
+                      <li>Vertical Capacity: {{output.netlist_details.ver_cap}}</li>
+                      <li>Netlist Size: {{output.netlist_size}}</li>
+                      <li>Overflow: {{output.overflow}}</li>
+                      <li>Wirelength: {{output.wirelength}}</li>
+                      <li>Timestamp: {{output.timestamp}}</li>
                     </ul>
+                  <a href="/download/{{output.unique_name}}" class="btn btn-primary" >Download Output</a>
                   </span>
                 </div>
               </div>
